# path-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  extension.toml  package-lock.json  package.json
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
extensions/vscode/: .gitignore  .vscodeignore  package-lock.json  package.json
extensions/vscode/scripts/: build_server.js
extensions/vscode/src/: commands.ts  extension.ts
extensions/zed/: .gitignore  CHANGELOG.md  Cargo.toml  extension.toml
extensions/zed/src/: config.rs  lib.rs
src/: async_fs.rs  client.rs  common.rs  completion.rs  config.rs  document.rs  error.rs  extension.ts  fs.rs  lib.rs  logger.rs  main.rs  parser.rs  resolver.rs  server.rs  utils.rs
src/document/: language.rs  mod.rs
src/parser/: document.rs  languages.rs  line.rs  mod.rs  path.rs  unescape.rs  utils.rs
src/parser/document/: general.rs  mod.rs  tree_sitter.rs
src/parser/extractor/: general.rs  mod.rs  tree_sitter.rs
src/parser/path/: mod.rs  regex.rs
src/parser/tree_sitter/: mod.rs  ts_dockerfile.rs  ts_general.rs  ts_html.rs  ts_markdown.rs
src/providers/: completion.rs  definition.rs  document_link.rs  hover.rs  link.rs  mod.rs
src/resolver/: collect.rs  mod.rs  query.rs
tests/: test_completion.rs  test_config.rs  test_document_link.rs  test_goto_definition.rs  test_hover.rs
tests/utils/: harness.rs
