[package]
name = "path-server"
version = "0.2.0"
edition = "2024"
description = "A fast and lightweight language server for path completion."
license = "Apache-2.0"
repository = "https://github.com/kunlinglio/path-server"
readme = "README.md"

[dependencies]
line-index = "0.1.2"
regex = "1.12.3"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp = "0.20.0"

[dev-dependencies]
tempfile = "3.26.0"
