[package]
name = "path-server"
version = "0.4.0"
edition = "2024"
description = "A fast and lightweight language server for path completion."
license = "Apache-2.0"
repository = "https://github.com/kunlinglio/path-server"
readme = "README.md"

[dependencies]
blake3 = "1.8.3"
config = "0.15.19"
futures = "0.3.32"
globset = "0.4.18"
hf = "0.6.0"
line-index = "0.1.2"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
